# BMP_Steganography

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: my_ci.yml
Libs/: CMakeLists.txt
Libs/BmpFileHandler/: BmpFileHandler.cpp  BmpFileHandler.hpp  CMakeLists.txt
R_BMP_Steganografia/: BMP_HideData_Steganografia.dev  BMP_HideData_Steganografia.layout  HideData_BMP_R.cpp  HideData_BMP_R.h  Makefile.win  main.cpp
R_BMP_Steganography/: HideData_BMP_R.cpp  HideData_BMP_R.h
Steganography_Decoder/: CMakeLists.txt  main.cpp
Steganography_Decoder/Src/: CMakeLists.txt
Steganography_Decoder/Src/StegonoDecoder/: CMakeLists.txt  SteganoDecoder.cpp  SteganoDecoder.hpp
Steganography_Encoder/: CMakeLists.txt  main.cpp
Steganography_Encoder/Src/: CMakeLists.txt
Steganography_Encoder/Src/StegonoEncoder/: CMakeLists.txt  SteganoEncoder.cpp  SteganoEncoder.hpp
Tests/: CMakeLists.txt
Tests/AppTest/: AppTest_EncodeDecode.cpp  CMakeLists.txt
Tests/LibTest/: CMakeLists.txt
Tests/LibTest/BmpFileHandlerTest/: BmpFileHandlerTest.cpp  CMakeLists.txt
